--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
           </div>
         </div>
         <div class="col-md-8 ml-auto mr-auto">
-        <form>
+        <form method="POST" action="http://192.168.6.249/api/staff-requirements/">
             <div class="form-group">
               <label for="exampleFormControlInput1">Hard Skills</label>
-              <input type="email" class="form-control" id="hard_skills" name="hard_skills" placeholder="Python, Javascript,PHP">
+              <input type="text" class="form-control" id="hard_skills" name="hard_skills" placeholder="Python, Javascript,PHP">
             </div>
 
             <div class="form-row">
@@ -107,12 +107,12 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label >Range Start Date</label>
-                    <input type="date" name="ranger_start_date" max="3000-12-31" 
+                    <input type="date" name="range_start_date" max="3000-12-31" 
                            min="1000-01-01" class="form-control">
                    </div>
                    <div class="form-group col-md-6">
                     <label >Deadline Project</label>
-                    <input type="date" name="dead_line_project" min="1000-01-01"
+                    <input type="date" name="deadline_project" min="1000-01-01"
                            max="3000-12-31" class="form-control">
                    </div>
             </div>
@@ -120,7 +120,7 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label>Email Notification</label>
-                    <input type="email" class="form-control">
+                    <input type="email" name=email_notification class="form-control">
                   </div>
                 </div>
                 <div class="col-md-6">
