--- a/charts/index.html
+++ b/charts/index.html
@@ -21,8 +21,14 @@
 	</style>
   </head>
   <body>
-    <div id="body">
-	  <div id="chart"></div>
+    <div id="body1">
+	  <div id="chart1"></div>
+    </div>
+    <div id="body2">
+	  <div id="chart2"></div>
+    </div>
+    <div id="body3">
+	  <div id="chart3"></div>
     </div>
 
     <script type="text/javascript" src="script.js"></script>
